kubernetes/ergaleia.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: toolbox
  labels:
    name: toolbox
  annotations:
    iam.amazonaws.com/allowed-roles: ""

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: toolbox
  name: default-deny-ingress
spec:
  podSelector: {}
  policyTypes:
  - Ingress

---
kind: StatefulSet
apiVersion: apps/v1beta1
metadata:
  name: ergaleia
  namespace: toolbox
  labels:
    name: ergaleia
    k8s-app: ergaleia
spec:
  updateStrategy:
    type: RollingUpdate
  serviceName: none
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: ergaleia
    spec:
      serviceAccountName: ergaleia
      # enforce running on a master node
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/master
                operator: Exists
      # tolerate running on a master node
      tolerations:
      - key: node-role.kubernetes.io/master
        operator: Exists
        effect: NoSchedule
      containers:
      - name: ergaleia
        image: quay.io/virtuslab/ergaleia:v0.0.8
        command:
        - /bin/bash
        args:
        - "-c"
        - "sleep infinity"
        tty: true
        stdin: true
        securityContext:
          privileged: true
        volumeMounts:
        # for docker
        - mountPath: /var/run/docker.sock
          name: docker-sock
          readOnly: false
        # for sysdig
        - mountPath: /host/var/run/docker.sock
          name: docker-sock
          readOnly: false
        - mountPath: /host/dev
          name: dev-vol
          readOnly: false
        - mountPath: /host/proc
          name: proc-vol
          readOnly: true
        - mountPath: /host/boot
          name: boot-vol
          readOnly: true
        - mountPath: /host/lib/modules
          name: modules-vol
          readOnly: true
        - mountPath: /host/usr
          name: usr-vol
          readOnly: true
        - mountPath: /dev/shm
          name: dshm
      # use kube-dns from DNS resolution
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      hostPID: true
      volumes:
      - name: docker-sock
        hostPath:
          path: /var/run/docker.sock
      - name: dev-vol
        hostPath:
          path: /dev
      - name: proc-vol
        hostPath:
          path: /proc
      - name: boot-vol
        hostPath:
          path: /boot
      - name: modules-vol
        hostPath:
          path: /lib/modules
      - name: usr-vol
        hostPath:
          path: /usr
      - name: dshm
        emptyDir:
          medium: Memory
